--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@types/react-dom": "18.2.7",
     "ai": "^4.0.20",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lucide-react": "^0.468.0",
     "next": "13.4.12",
     "openai": "^4.77.0",
     "postcss": "8.4.27",
+    "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
 }
-
