--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "radix-ui": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
   }
